KThinkBat 0.2.5
   * #20: New translation for Bulgarian from Aleksandar Tsankov
   * Reworked icon set which is now more oxygen-like and with a shadow, send by
     Luis Guillermo Sobalvarro
   * #21: Added one translated message to Italian translation
   * Update to the Spanish translation to be easier understandable, thanks to 
     Luis Guillermo Sobalvarro (again)

KThinkBat 0.2.4 - 06.01.2007:
   * #11: better detection, if battery is installed or not
   * #12: more control over the text labels, the battery gauge content can now 
     be empty or display remaining time or remaining power
   * more German translations
   * #8: slightly rearranged config dialog
   * #14: Don't display remaining time of 0 min if battery is fully charged but
    show the word "full" instead
   * #19: Added Italian translation provided by Anselmo Luginbühl

KThinkBat 0.2.3 - 18.11.2006:
   * #10: Adapt remaining time calculation to ampere based battery information
     on Asus and Acer laptops
   * #10: optimized ACPI parsing and ampere/volt detection
   * #10, #8: made ACPI and SMAPI path configurable via config file (this makes
     testing with foreign battery information easier)

KThinkBat 0.2.2 - 28.10.2006:
   * #6: removed faulty text label from config dialog
   * #3: added option to draw the battery gauge upright
   * better ACPI support (design capacity, design critical capacity)
   * calculate remaining (discharging) time from capacity values, 
     if the better embedded controler values ar not available
   * changed min-max range for gauge size values to reflect upright gauge option
   * show also the remaining time in the applet
   * fixed some bugs, reported by Jan Ciger

KThinkBat 0.2.1 - 22 Okt 2006:
   * parse the remaining time if using tp_smapi >= 0.29
   * display the remaining time in the tooltip
   * prepared config dialog for remaining time and rearranged the color choosers 
   * added "is charging" parsing if using tp_smapi