@@ -5,6 +5,7 @@ KThinkBat 0.2.5
    * #21: Added one translated message to Italian translation
    * Update to the Spanish translation to be easier understandable, thanks to 
      Luis Guillermo Sobalvarro (again)
+   * Remaining time can be shown in hours format (h:mm) or in minutes (m min)
 
 KThinkBat 0.2.4 - 06.01.2007:
    * #11: better detection, if battery is installed or not
